css/main.css
/* ... */
.burger__line:nth-child(2) {
  top: 50%;
  left: 10%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.burger__line:nth-child(3) {
  bottom: 25%;
  left: 10%;
}

/* header */
.header {
  z-index: 100;
  position: fixed;
  top: 0;
  height: 95px;
  width: 100%;
}

.header__container {
  padding-top: 20px;
  padding-bottom: 20px;
}

.header__box {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius-s);
  padding: 12px 20px;
  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.05);
  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.05);
  background-color: var(--color-white);
}

.header__contacts {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.header__phone {
  z-index: 100;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  height: 30px;
  border-radius: var(--border-radius-l);
  padding: 4px 16px;
  font-size: 14px;
  background-color: var(--color-black);
  -webkit-transition:
    background-color 0.2s ease,
    outline 0.2s ease;
  -o-transition:
    background-color 0.2s ease,
    outline 0.2s ease;
  transition:
    background-color 0.2s ease,
    outline 0.2s ease;
}

.header__phone:focus-visible {
  outline: none;
  background-color: var(--color-red);
}

.header__phone:hover:not(:focus-visible) {
  background-color: var(--color-red);
}

.header__phone:active:not(:focus-visible) {
  background-color: var(--color-black);
}

.header__phone span {
  color: var(--color-white);
}

.header__phone svg path {
  fill: var(--color-white);
}

.header__telegram {
  z-index: 100;
  height: 30px;
}

.header__telegram:focus-visible {
  outline: none;
}

.header__telegram svg path {
  -webkit-transition: fill 0.2s ease;
  -o-transition: fill 0.2s ease;
  transition: fill 0.2s ease;
}

.header__telegram:focus-visible.header__telegram svg path {
  fill: var(--color-red);
}

.header__telegram:hover:not(:focus-visible).header__telegram svg path {
  fill: var(--color-red);
}

.header__telegram:active:not(:focus-visible).header__telegram svg path {
  fill: var(--color-black);
}

/* hero */
.hero {
  padding-top: 120px;
  padding-bottom: 40px;
  background-color: var(--color-gray);
}

.hero__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.hero__content {
  max-width: 600px;
}

.hero__title {
  margin: 0;
  margin-bottom: 20px;
  font-size: 48px;
  line-height: 100%;
}

.hero__title span {
  color: var(--color-red);
}

.hero__subtitle {
  position: relative;
  display: block;
  padding-left: 10px;
}

.hero__subtitle:not(:last-child) {
  margin-bottom: 10px;
}

.hero__subtitle::before {
  position: absolute;
  content: "";
  left: 0;
  width: 2px;
  height: 100%;
  background-color: var(--color-red);
}

.hero__image {
  max-height: 385px;
  max-width: 500px;
}

/* experience */
.experience__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 30px;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.experience__item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5px;
  width: calc((100% - 90px) / 4);
  border-radius: var(--border-radius-s);
  padding: 70px 30px 30px 30px;
  background-repeat: no-repeat;
  background-position: center top 30px;
  background-color: var(--color-gray);
}

.experience__item--standing {
  background-image: url("../images/icons/star.svg");
}

.experience__item--time {
  background-image: url("../images/icons/clock.svg");
}

.experience__item--repair {
  background-image: url("../images/icons/computer.svg");
}

.experience__item--diagnostics {
  background-image: url("../images/icons/cash.svg");
}

.experience__item-title {
  margin: 0;
  margin-bottom: auto;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
}

.experience__item-text {
  color: var(--color-red);
}

/* catalog */
.catalog__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 30px;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.catalog__item {
  width: calc((100% - 60px) / 3);
}

.card {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  border-radius: var(--border-radius-s);
  background-color: var(--color-gray);
}

.card__content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
}

.card__title {
  margin: 0;
  margin-bottom: 10px;
  font-size: 20px;
}

.card__image {
  height: 220px;
  border-radius: var(--border-radius-s);
  -o-object-fit: cover;
  object-fit: cover;
}

/* stages */
.stages__list {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 30px 1fr 30px 1fr 30px 1fr 30px 1fr;
  grid-template-columns: repeat(5, 1fr);
  gap: 30px;
}

.stages__item {
  position: relative;
  border-radius: var(--border-radius-s);
  padding: 70px 20px 20px 20px;
  background-color: var(--color-gray);
}
/* ... */

